@@ -1,4 +1,4 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 
 <!--This file is part of Chummer5a.
 
@@ -5736,10 +5736,10 @@
           <rating>1</rating>
         </cyberware>
         <cyberware>
-          <name>Retractable Climbing Claws</name>
+          <name>Retractable Climbing Claws (Hands)</name>
         </cyberware>
         <cyberware>
-          <name>Retractable Climbing Claws</name>
+          <name>Retractable Climbing Claws (Hands)</name>
         </cyberware>
       </subsystems>
       <forbidden>
